Book_Store_Proj_manifest/force-app/main/default/objects/Error_Log_Event__e/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>