Book_Store_Proj_manifest/force-app/main/default/objects/Error_Log_Event__e/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <label>Exception Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>