Book_Store_Proj_manifest/force-app/main/default/objects/Error_Log_Event__e/fields/Initiated_By_User__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By_User__c</fullName>
    <label>Initiated By User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>